--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/js/swiper.min.js"></script>
     <!--Stylesheet -->
     <link rel="stylesheet" href="css/style.css" media="screen">
-
+    <!-- Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Java Script-->
     <script src="js/main.js"></script>
 
@@ -22,17 +23,27 @@
 <body>
 <div class="swiper-container">
 <div class="swiper-wrapper">
-    <div class="swiper-slide">Slide 1</div>
+    <div class="swiper-slide">
+
+        <div class="landing-page">
+            <div class="headline">
+                <img src="assets/imgs/uniqa_logo.JPG">
+                <h1>Generalagentur<br> Bergmann &amp; Steiner</h1>
+            </div>
+
+            <div class="navigation">
+            <p>Informationen</p>
+            <i class="material-icons">keyboard_arrow_down</i>
+
+            </div>
+        </div>
+
+
+
+    </div>
     <div class="swiper-slide">Slide 2</div>
     <div class="swiper-slide">Slide 3</div>
-    <div class="swiper-slide">Slide 3</div>
-    <div class="swiper-slide">Slide 4</div>
-    <div class="swiper-slide">Slide 5</div>
-    <div class="swiper-slide">Slide 6</div>
-    <div class="swiper-slide">Slide 7</div>
-    <div class="swiper-slide">Slide 8</div>
-    <div class="swiper-slide">Slide 9</div>
-    <div class="swiper-slide">Slide 10</div>
+
 
 </div>
 
