all pages included

--- a/index.html
+++ b/index.html
@@ -18,42 +18,84 @@
     <script src="js/main.js"></script>
 
 
-
 </head>
 <body>
 <div class="swiper-container">
-<div class="swiper-wrapper">
-    <div class="swiper-slide">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
 
-        <div class="landing-page">
-            <div class="headline">
-                <img src="assets/imgs/uniqa_logo.JPG">
-                <h1>Generalagentur<br> Bergmann &amp; Steiner</h1>
+            <div class="landing-page">
+                <div class="headline">
+                    <img src="assets/imgs/uniqa_logo.JPG">
+                    <h1>Generalagentur<br> Bergmann &amp; Steiner</h1>
+                </div>
+
+                <div class="navigation-down">
+                    <p>Informationen</p>
+                    <i class="material-icons">keyboard_arrow_down</i>
+
+                </div>
             </div>
 
-            <div class="navigation">
-            <p>Informationen</p>
-            <i class="material-icons">keyboard_arrow_down</i>
+
+        </div>
+        <div class="swiper-slide">
+
+            <div class="general-informations">
+            <div class="navigation-up">
+                <i class="material-icons">keyboard_arrow_up</i>
+                <p>Startseite</p>
 
             </div>
+
+
+
+
+
+            <div class="general-informations">
+                <div class="navigation-down">
+                    <p>Das Team</p>
+                    <i class="material-icons">keyboard_arrow_down</i>
+
+                </div>
+            </div>
+            </div>
+
+        </div>
+        <div class="swiper-slide">
+            <div class="team-page">
+                <div class="navigation-up">
+                    <i class="material-icons">keyboard_arrow_up</i>
+                    <p>Informationen</p>
+
+                </div>
+                <div class="navigation-down">
+                    <p>Impressum</p>
+                    <i class="material-icons">keyboard_arrow_down</i>
+
+                </div>
+
+
+
+            </div>
+
+
+        </div>
+        <div class="swiper-slide">
+            <div class="impressum">
+            <div class="navigation-up">
+                <i class="material-icons">keyboard_arrow_up</i>
+                <p>Das Team</p>
+
+            </div>
+            </div>
+
         </div>
 
-
-
     </div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
-
-
-</div>
 
     <div class="swiper-pagination"></div>
 </div>
-
-
-
-
-
 
 
 </body>
