--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <body>
 <div class="swiper-container">
     <div class="swiper-wrapper">
+
+        <!--STARTSEITE -->
+
         <div class="swiper-slide">
 
             <div class="landing-page">
@@ -39,61 +42,69 @@
 
 
         </div>
+
+
+        <!--INFORMATIONEN -->
+
         <div class="swiper-slide">
 
             <div class="general-informations">
-            <div class="navigation-up">
-                <i class="material-icons">keyboard_arrow_up</i>
-                <p>Startseite</p>
-
-            </div>
-
-
-
-
-
-            <div class="general-informations">
-                <div class="navigation-down">
-                    <p>Das Team</p>
-                    <i class="material-icons">keyboard_arrow_down</i>
+                <div class="navigation-up">
+                    <i class="material-icons">keyboard_arrow_up</i>
+                    <p>Startseite</p>
 
                 </div>
-            </div>
+
+
+                <div class="general-informations">
+                    <div class="navigation-down">
+                        <p>Das Team</p>
+                        <i class="material-icons">keyboard_arrow_down</i>
+
+                    </div>
+                </div>
             </div>
 
         </div>
+
+        <!--TEAMSEITE -->
+
         <div class="swiper-slide">
             <div class="team-page">
                 <div class="navigation-up">
                     <i class="material-icons">keyboard_arrow_up</i>
                     <p>Informationen</p>
-
                 </div>
+
+
+
+
                 <div class="navigation-down">
                     <p>Impressum</p>
                     <i class="material-icons">keyboard_arrow_down</i>
 
                 </div>
-
-
+            </div>
 
             </div>
 
 
-        </div>
+
+
+    <!--IMPRESSUM -->
+
         <div class="swiper-slide">
             <div class="impressum">
-            <div class="navigation-up">
-                <i class="material-icons">keyboard_arrow_up</i>
-                <p>Das Team</p>
+                <div class="navigation-up">
+                    <i class="material-icons">keyboard_arrow_up</i>
+                    <p>Das Team</p>
 
+                </div>
             </div>
-            </div>
-
+        </div>
         </div>
 
-    </div>
-
+</div>
     <div class="swiper-pagination"></div>
 </div>
 
