information elements colored for positioning

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
 
                 </div>
 
+                <div class="information-wrapper">
+                    <div class="foreword"> </div>
+                    <div class="opening-times"> </div><br>
+                    <div class="location"> </div>
+                    <div class="contact"> </div>
+
+
+
+                </div>
+
+
 
                 <div class="general-informations">
                     <div class="navigation-down">
