multiple fixes & first content & Team Page design

--- a/index.html
+++ b/index.html
@@ -56,25 +56,28 @@
                 </div>
 
                 <div class="information-wrapper">
-                    <div class="foreword"> </div>
-                    <div class="opening-times"> </div><br>
-                    <div class="location"> </div>
-                    <div class="contact"> </div>
-
-
-
+                    <div class="foreword">
+                        <h1>Vorwort:</h1>
+                        <br>
+                        <p>Herzlich Willkommen auf der Homepage der UNIQA GeneralAgentur Bergmann & Steiner!
+                            Sie finden hier die wichtigsten Kontaktinformationen – der direkte Draht zu Felix Bergmann und Andreas Steiner.
+                            Vielen Dank für Ihr Interesse! Wir freuen uns schon auf Ihre Anfrage!
+                        </p>
+                    </div>
+                    <div class="opening-times"></div>
+                    <div class="location"></div>
+                    <div class="contact"></div>
                 </div>
 
 
 
-                <div class="general-informations">
                     <div class="navigation-down">
                         <p>Das Team</p>
                         <i class="material-icons">keyboard_arrow_down</i>
 
                     </div>
                 </div>
-            </div>
+
 
         </div>
 
@@ -86,9 +89,15 @@
                     <i class="material-icons">keyboard_arrow_up</i>
                     <p>Informationen</p>
                 </div>
-
-
-
+                <div class="team-wrapper">
+                    <div class="team"><h1>Das Team</h1></div>
+                    <div class="andreas"></div>
+                    <div class="felix"></div>
+                    <div class="stefan"></div>
+                    <div class="franziska"></div>
+                    <div class="silvia"></div>
+                    <div class="tanja"></div>
+                </div>
 
                 <div class="navigation-down">
                     <p>Impressum</p>
@@ -97,12 +106,10 @@
                 </div>
             </div>
 
-            </div>
+        </div>
 
 
-
-
-    <!--IMPRESSUM -->
+        <!--IMPRESSUM -->
 
         <div class="swiper-slide">
             <div class="impressum">
@@ -113,10 +120,10 @@
                 </div>
             </div>
         </div>
-        </div>
+    </div>
 
 </div>
-    
+
 </div>
 
 
