--- a/index.html
+++ b/index.html
@@ -64,9 +64,32 @@
                             Vielen Dank für Ihr Interesse! Wir freuen uns schon auf Ihre Anfrage!
                         </p>
                     </div>
-                    <div class="opening-times"></div>
-                    <div class="location"></div>
-                    <div class="contact"></div>
+                    <div class="opening-times">
+                        <h1>&Ouml;ffnungszeiten:</h1>
+                        <br>
+                        <div class="times">
+                        <p class="day">Montag:</p><p class="time">08:00 - 16:00</p><br>
+                        <p class="day">Dienstag</p><p class="time">08:00 - 16:00</p><br>
+                        <p class="day">Mittwoch:</p><p class="time">08:00 - 16:00</p><br>
+                        <p class="day">Donnerstag:</p> <p class="time">08:00 - 16:00</p><br>
+                        <p class="day">Freitag:</p><p class="time">08:00 - 16:00</p>
+                            <br>
+
+
+                        </div>
+                    </div>
+                    <div class="location">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.713739075712!2d13.421374715555306!3d47.37850531170005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4776d35aead4ec47%3A0x82aaf2a2e862feb8!2sVersicherungsAgentur+Bergmann+%26+Steiner!5e0!3m2!1sde!2sde!4v1490011396183" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+                    </div>
+                    <div class="contact">
+                        <h1>Kontakt:</h1>
+                        <p>Telefon: +43 6452 / 30 350<br>
+                        Telefax: +43 6452 / 30 350-50<br>
+                        E-Mail: office@uniqa-generalagentur.at<br>
+                        www.uniqa-generalagentur.at</p>
+
+                    </div>
                 </div>
 
 
