--- a/index.html
+++ b/index.html
@@ -114,7 +114,14 @@
                 </div>
                 <div class="team-wrapper">
                     <div class="team"><h1>Das Team</h1></div>
-                    <div class="andreas"></div>
+                    <div class="andreas">
+                        <div class="andreas-hovered">
+                        <h1>Andreas Steiner</h1>
+                        <i class="material-icons">mail_outline</i><p>andreas.steiner@uniqa-generalagentur.at</p>
+                        <br>
+                        <i class="material-icons">call</i><p>+43 664 / 864 82 21</p>
+                    </div>
+                    </div>
                     <div class="felix"></div>
                     <div class="stefan"></div>
                     <div class="franziska"></div>
