--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                         <h1>Vorwort:</h1>
                         <br>
                         <p>Herzlich Willkommen auf der Homepage der UNIQA GeneralAgentur Bergmann & Steiner!
-                            Sie finden hier die wichtigsten Kontaktinformationen – der direkte Draht zu Felix Bergmann und Andreas Steiner.
+                            Sie finden hier die wichtigsten Kontaktinformationen – der direkte Draht zu Felix Bergmann
+                            und Andreas Steiner.
                             Vielen Dank für Ihr Interesse! Wir freuen uns schon auf Ihre Anfrage!
                         </p>
                     </div>
@@ -68,38 +69,43 @@
                         <h1>&Ouml;ffnungszeiten:</h1>
                         <br>
                         <div class="times">
-                        <p class="day">Montag:</p><p class="time">08:00 - 16:00</p><br>
-                        <p class="day">Dienstag</p><p class="time">08:00 - 16:00</p><br>
-                        <p class="day">Mittwoch:</p><p class="time">08:00 - 16:00</p><br>
-                        <p class="day">Donnerstag:</p> <p class="time">08:00 - 16:00</p><br>
-                        <p class="day">Freitag:</p><p class="time">08:00 - 16:00</p>
+                            <p class="day">Montag:</p>
+                            <p class="time">08:00 - 16:00</p><br>
+                            <p class="day">Dienstag</p>
+                            <p class="time">08:00 - 16:00</p><br>
+                            <p class="day">Mittwoch:</p>
+                            <p class="time">08:00 - 16:00</p><br>
+                            <p class="day">Donnerstag:</p>
+                            <p class="time">08:00 - 16:00</p><br>
+                            <p class="day">Freitag:</p>
+                            <p class="time">08:00 - 16:00</p>
                             <br>
 
 
                         </div>
                     </div>
                     <div class="location">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.713739075712!2d13.421374715555306!3d47.37850531170005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4776d35aead4ec47%3A0x82aaf2a2e862feb8!2sVersicherungsAgentur+Bergmann+%26+Steiner!5e0!3m2!1sde!2sde!4v1490011396183" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.713739075712!2d13.421374715555306!3d47.37850531170005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4776d35aead4ec47%3A0x82aaf2a2e862feb8!2sVersicherungsAgentur+Bergmann+%26+Steiner!5e0!3m2!1sde!2sde!4v1490011396183"
+                                width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 
                     </div>
                     <div class="contact">
                         <h1>Kontakt:</h1>
                         <p>Telefon: +43 6452 / 30 350<br>
-                        Telefax: +43 6452 / 30 350-50<br>
-                        E-Mail: office@uniqa-generalagentur.at<br>
-                        www.uniqa-generalagentur.at</p>
+                            Telefax: +43 6452 / 30 350-50<br>
+                            E-Mail: office@uniqa-generalagentur.at<br>
+                            www.uniqa-generalagentur.at</p>
 
                     </div>
                 </div>
 
 
+                <div class="navigation-down">
+                    <p>Das Team</p>
+                    <i class="material-icons">keyboard_arrow_down</i>
 
-                    <div class="navigation-down">
-                        <p>Das Team</p>
-                        <i class="material-icons">keyboard_arrow_down</i>
-
-                    </div>
                 </div>
+            </div>
 
 
         </div>
@@ -114,47 +120,110 @@
                 </div>
                 <div class="team-wrapper">
                     <div class="team"><h1>Das Team</h1></div>
+
                     <div class="andreas">
                         <div class="andreas-hovered">
-                        <h1>Andreas Steiner</h1>
-                        <i class="material-icons">mail_outline</i><p>andreas.steiner@uniqa-generalagentur.at</p>
-                        <br>
-                        <i class="material-icons">call</i><p>+43 664 / 864 82 21</p>
+                            <h1>Andreas Steiner</h1>
+                            <br>
+                            <div class="mail">
+                                <p><i class="material-icons">mail_outline</i>andreas.steiner@uniqa.at</p>
+                            </div>
+                            <br>
+                            <div class="phone">
+
+                                <p><i class="material-icons">call</i>+43 664 / 864 82 21</p>
+                            </div>
+                        </div>
                     </div>
+
+                    <div class="felix">
+                        <div class="felix-hovered">
+                            <h1>Felix Bergmann</h1>
+                            <br>
+                            <div class="mail">
+                                <p><i class="material-icons">mail_outline</i>felix.bergmann@uniqa.at</p>
+                            </div>
+                            <br>
+                            <div class=" phone">
+                                <p><i class="material-icons">call</i>+43 664 / 272 62 85</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="felix"></div>
-                    <div class="stefan"></div>
-                    <div class="franziska"></div>
-                    <div class="silvia"></div>
-                    <div class="tanja"></div>
-                </div>
 
-                <div class="navigation-down">
-                    <p>Impressum</p>
-                    <i class="material-icons">keyboard_arrow_down</i>
+                    <div class="stefan">
+                        <div class="stefan-hovered">
+                            <h1>Stefan Bergmann</h1>
+                            <br>
+                            <div class="mail">
+                                <p><i class="material-icons">mail_outline</i>stefan.bergmann@uniqa.at</p>
+                            </div>
+                            <br>
+                            <div class=" phone">
+                                <p><i class="material-icons">call</i>+43 664 / 180 78 09</p>
+                            </div>
+                        </div>
+                    </div>
 
-                </div>
-            </div>
+                    <div class="franziska">
+                        <div class="franziska-hovered">
+                            <h1>Franziska Innreiter</h1>
+                            <br>
+                            <div class="mail">
+                                <p><i class="material-icons">mail_outline</i>office@uniqa-generalagentur.at</p>
+                            </div>
+                            <br>
+                            <div class=" phone">
+                                <p><i class="material-icons">call</i>+43 6452 / 30350</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="silvia">
+                        <div class="silvia-hovered">
+                            <h1>Silvia Innreiter</h1>
+                            <br>
+                            <div class="mail">
+                                <p><i class="material-icons">mail_outline</i>office@uniqa-generalagentur.at</p>
+                            </div>
+                            <br>
+                            <div class=" phone">
+                                <p><i class="material-icons">call</i>+43 6452 / 30350</p>
+                            </div>
+                        </div>
+                    </div>
 
-        </div>
+                    <div class="tanja">
+                        <div class="tanja-hovered">
+                            <h1>Tanja Quehenberger</h1>
+                            <br>
+                            <div class="mail">
+                                <p><i class="material-icons">mail_outline</i>office@uniqa-generalagentur.at</p>
+                            </div>
+                            <br>
+                            <div class=" phone">
+                                <p><i class="material-icons">call</i>+43 6452 / 30350</p>
+                            </div>
+                        </div>
+                    </div>
 
 
-        <!--IMPRESSUM -->
+                    <div class="navigation-down">
+                        <p>Impressum</p>
+                        <i class="material-icons">keyboard_arrow_down</i>
 
-        <div class="swiper-slide">
-            <div class="impressum">
-                <div class="navigation-up">
-                    <i class="material-icons">keyboard_arrow_up</i>
-                    <p>Das Team</p>
+                    </div>
 
-                </div>
-            </div>
-        </div>
-    </div>
 
-</div>
+                    <!--IMPRESSUM -->
 
-</div>
+                    <div class="swiper-slide">
+                        <div class="impressum">
+                            <div class="navigation-up">
+                                <i class="material-icons">keyboard_arrow_up</i>
+                                <p>Das Team</p>
+
+                            </div>
+                        </div>
+                    </div>
 
 
 </body>
