--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="landing-page">
                 <div class="headline">
                     <img src="assets/imgs/uniqa_logo.JPG">
-                    <h1>Generalagentur<br> Bergmann &amp; Steiner</h1>
+                    <h1>GeneralAgentur<br> Bergmann &amp; Steiner</h1>
                 </div>
 
                 <div class="navigation-down">
