--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
                 <div class="information-wrapper">
                     <div class="foreword">
+                        <div class="content">
                         <h1>Vorwort:</h1>
                         <br>
                         <p>Herzlich Willkommen auf der Homepage der UNIQA GeneralAgentur Bergmann & Steiner!
@@ -64,8 +65,10 @@
                             und Andreas Steiner.
                             Vielen Dank für Ihr Interesse! Wir freuen uns schon auf Ihre Anfrage!
                         </p>
+                        </div>
                     </div>
                     <div class="opening-times">
+                        <div class="content">
                         <h1>&Ouml;ffnungszeiten:</h1>
                         <br>
                         <div class="times">
@@ -83,6 +86,7 @@
 
 
                         </div>
+                        </div>
                     </div>
                     <div class="location">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.713739075712!2d13.421374715555306!3d47.37850531170005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4776d35aead4ec47%3A0x82aaf2a2e862feb8!2sVersicherungsAgentur+Bergmann+%26+Steiner!5e0!3m2!1sde!2sde!4v1490011396183"
@@ -90,12 +94,14 @@
 
                     </div>
                     <div class="contact">
+                        <div class="content">
                         <h1>Kontakt:</h1>
                         <p>Telefon: +43 6452 / 30 350<br>
                             Telefax: +43 6452 / 30 350-50<br>
                             E-Mail: office@uniqa-generalagentur.at<br>
                             www.uniqa-generalagentur.at</p>
 
+                    </div>
                     </div>
                 </div>
 
@@ -164,9 +170,9 @@
                         </div>
                     </div>
 
-                    <div class="franziska">
-                        <div class="franziska-hovered">
-                            <h1>Franziska Innreiter</h1>
+                    <div class="jasminnke">
+                        <div class="jasminke-hovered">
+                            <h1>Jasminke Sinnhub</h1>
                             <br>
                             <div class="mail">
                                 <p><i class="material-icons">mail_outline</i>office@uniqa-generalagentur.at</p>
