--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/js/swiper.min.js"></script>
-    <!--Stylesheet -->
-    <link rel="stylesheet" href="css/style.css" media="screen">
+    <!--Stylesheets -->
+    <link rel="stylesheet" media='screen' href="css/style.css">
+    <!--Stylesheet Desktop -->
+    <link rel="stylesheet" media='screen(min-width: 1001px) and (max-width: 1920px)' href="css/style.css">
+    <!--Stylesheet mobile -->
+    <link rel="stylesheet" media='screen and (min-width: 100px) and (max-width: 1000px)' href="css/style_mobile.css">
+
+
     <!-- Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Java Script-->
