--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/js/swiper.min.js"></script>
     <!--Stylesheets -->
-    <link rel="stylesheet" media='screen' href="css/style.css">
-    <!--Stylesheet Desktop -->
-    <link rel="stylesheet" media='screen(min-width: 1001px) and (max-width: 1920px)' href="css/style.css">
+    <!-- <link rel="stylesheet" media='screen' href="css/style.css"> -->
+   <!--Stylesheet Desktop -->
+    <link rel="stylesheet" media='screen and (min-width: 1001px) and (max-width: 1920px)' href="css/style_desktop.css">
     <!--Stylesheet mobile -->
     <link rel="stylesheet" media='screen and (min-width: 100px) and (max-width: 1000px)' href="css/style_mobile.css">
 
